filter: Add IS NULL and IS NOT NULL filters

https://bugzilla.gnome.org/show_bug.cgi?id=747618